still some small bugs for news page:gray+perplescroller+clickandchange

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,29 @@
 rootProject.name='Cov19News'
-include ':app', ':shinebuttonlib_module'
+include ':app', ':shinebuttonlib_module', ':mocks', ':annotation:compiler', ':integration:concurrent', ':samples:contacturi', ':annotation', ':samples:gallery', ':samples:giphy', ':library:pmd', ':library:test', ':integration:okhttp', ':third_party:disklrucache', ':samples:svg', ':integration:cronet', ':annotation:compiler:test', ':integration:gifencoder', ':integration:recyclerview', ':third_party:gif_decoder', ':library', ':integration:volley', ':integration', ':integration:okhttp3', ':instrumentation', ':samples:imgur', ':testutil', ':samples:flickr', ':library:findbugs'
 project(':shinebuttonlib_module').projectDir = new File('shinebuttonlib')
+project(':mocks').projectDir = new File('glide/mocks')
+project(':annotation:compiler').projectDir = new File('glide/annotation/compiler')
+project(':integration:concurrent').projectDir = new File('glide/integration/concurrent')
+project(':samples:contacturi').projectDir = new File('glide/samples/contacturi')
+project(':annotation').projectDir = new File('glide/annotation')
+project(':samples:gallery').projectDir = new File('glide/samples/gallery')
+project(':samples:giphy').projectDir = new File('glide/samples/giphy')
+project(':library:pmd').projectDir = new File('glide/library/pmd')
+project(':library:test').projectDir = new File('glide/library/test')
+project(':integration:okhttp').projectDir = new File('glide/integration/okhttp')
+project(':third_party:disklrucache').projectDir = new File('glide/third_party/disklrucache')
+project(':samples:svg').projectDir = new File('glide/samples/svg')
+project(':integration:cronet').projectDir = new File('glide/integration/cronet')
+project(':annotation:compiler:test').projectDir = new File('glide/annotation/compiler/test')
+project(':integration:gifencoder').projectDir = new File('glide/integration/gifencoder')
+project(':integration:recyclerview').projectDir = new File('glide/integration/recyclerview')
+project(':third_party:gif_decoder').projectDir = new File('glide/third_party/gif_decoder')
+project(':library').projectDir = new File('glide/library')
+project(':integration:volley').projectDir = new File('glide/integration/volley')
+project(':integration').projectDir = new File('glide/integration')
+project(':integration:okhttp3').projectDir = new File('glide/integration/okhttp3')
+project(':instrumentation').projectDir = new File('glide/instrumentation')
+project(':samples:imgur').projectDir = new File('glide/samples/imgur')
+project(':testutil').projectDir = new File('glide/testutil')
+project(':samples:flickr').projectDir = new File('glide/samples/flickr')
+project(':library:findbugs').projectDir = new File('glide/library/findbugs')
