--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,7 @@ dependencies {
 
     //SearchView with history
     implementation 'com.carson_ho:SearchLayout:1.0.1'
+
+    //MPAndroidChart
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.5'
 }
