--- a/shinebuttonlib/build.gradle
+++ b/shinebuttonlib/build.gradle
@@ -9,6 +9,12 @@ android {
         versionCode 9
         versionName "0.1.9"
 
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
